fixed alignments and provisioned for an edge case

--- a/src/Components/FlashCards/FlashCards.css
+++ b/src/Components/FlashCards/FlashCards.css
@@ -247,7 +247,7 @@ li {
     color: cornsilk;
     font-size: 18px;
     font-weight: bolder;
-    margin: 6.5em 2em 2em 0;
+    margin: 10.5em 2em 2em 0;
     border-radius: 10px;
     box-shadow: 0 8px 38px black;
     border: 0.3em solid gold;
